--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/mir.data.gz",
-        frameworkUrl: "Build/mir.framework.js.gz",
-        codeUrl: "Build/mir.wasm.gz",
+        dataUrl: "Build/mir.data",
+        frameworkUrl: "Build/mir.framework.js",
+        codeUrl: "Build/mir.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "stolpovski",
         productName: "mir",
